--- a/integrador1/pom.xml
+++ b/integrador1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>integrador1</groupId>
-    <artifactId>integrador</artifactId>
+    <artifactId>integrador1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
