--- a/TpEspecial/usuarioms/src/main/resources/application.properties
+++ b/TpEspecial/usuarioms/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=usuarioms
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.jdbc.dialect=mysql
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/usuarioms
