--- a/TpEspecial/paradams/pom.xml
+++ b/TpEspecial/paradams/pom.xml
@@ -3,16 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>TpEspecial</groupId>
+        <artifactId>TpEspecial</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>jpa</groupId>
-    <artifactId>Parada</artifactId>
+    <groupId>TpEspecial</groupId>
+    <artifactId>paradams</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Parada</name>
-    <description>Parada</description>
+    <name>paradams</name>
+    <description>paradams</description>
     <url/>
     <licenses>
         <license/>
@@ -32,7 +31,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
