feignclientsviaje con administrador

--- a/TpEspecial/viajems/src/main/resources/application.properties
+++ b/TpEspecial/viajems/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=viajems
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.jdbc.dialect=mysql
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/viajems
+server.port=8004
