--- a/TpEspecial/administradorms/src/main/resources/application.properties
+++ b/TpEspecial/administradorms/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/administradorms
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=8001
