--- a/TpEspecial/monopatinms/src/main/resources/application.properties
+++ b/TpEspecial/monopatinms/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/monopatinms
+server.port=8002
